# usd-wg-webview-tempcopy

./: .gitignore  .npmrc  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: test.yml
docs/: bindings-workflow.md  building.md  material-geometry-strategy.md  usd-material-fidelity.md  wasm-sdk.md
native/usd-webview-bindings/: CMakeLists.txt  main.cpp  usdWebViewBindings.js
native/usd-webview-bindings/src/: bindings.cpp  jsInterop.cpp  materials.cpp  meshExtraction.cpp  pointInstancer.cpp  skelBinding.cpp  splats.cpp  stageApi.cpp  stageRegistry.cpp  unifiedDriver.cpp  webviewCommon.h
public/payload/: blue_box.usda  red_box.usda  scene.usda
public/usd-webview-bindings/: usdWebViewBindings.js  usdWebViewBindingsModule.js
src/: main.ts  style.css  three-materialx-loader.d.ts
src/app/: animation.ts  appState.ts  attributesPanel.ts  automation.ts  dom.ts  layout.ts  loadOrchestrator.ts  menus.ts  sceneGraphPanel.ts  stageEdits.ts  statusBar.ts  summaries.ts
src/usd/: UsdWebViewRuntime.ts  fileIntake.ts  types.ts
src/viewer/: GaussianSplatRenderer.ts  GeometryBuilder.ts  Lighting.ts  MaterialFactory.ts  Navigation.ts  Picking.ts  RendererManager.ts  TextureCache.ts  ThreeViewport.ts  materialXCompatibility.ts  referenceHydraInterface.ts  viewerContext.ts
tests/corpus/animated-xform/: case.json  scene.usda
tests/corpus/material-subsets/: case.json  scene.usda
tests/corpus/materialx-tiled/: case.json  scene.usda
tests/corpus/materialx-tiled/material/: tiled-letter.mtlx
tests/corpus/normals-authored/: case.json  scene.usda
tests/corpus/payload-toggle/: case.json  payload.usda  scene.usda
tests/corpus/point-instancer/: case.json  scene.usda
tests/corpus/skinned-authored/: case.json  scene.usda
tests/corpus/skinned-inferred/: case.json  scene.usda
tests/corpus/skinned-no-range/: case.json  scene.usda
tests/corpus/splats-minimal/: case.json  scene.usda
tests/corpus/static-preview-surface/: case.json  scene.usda
tests/corpus/variants/: case.json  scene.usda
tests/unit/: fileIntake.test.ts  geometryBuilder.test.ts  materialFactory.test.ts  regressionGate.test.ts  usdWebViewRuntime.test.ts
tools/native-build/: stamp-build.mjs
tools/regression/: gate.mjs  run.mjs
tools/usd-material-fidelity/: README.md  common.mjs  config.samples.json  diff.mjs  import-material-fidelity.mjs  render-baseline.mjs  render-webview.mjs  run.mjs  usdify-case.mjs
